统一使用24小时制时间显示

--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -1,5 +1,5 @@
 <view class="container">
-  <view class="title">上下班打卡工具</view>
+  <view class="title">打卡</view>
   <view class="date-time">
     <picker 
       mode="date" 
