--- a/miniprogram/pages/stat/stat.wxml
+++ b/miniprogram/pages/stat/stat.wxml
@@ -36,7 +36,7 @@
 
     <view class="empty-state" wx:if="{{list.length === 0}}">
       <text class="empty-text">本月暂无打卡记录</text>
-      <text class="empty-hint">去打卡页面记录您的工作时间吧</text>
+      <text class="empty-hint">去打卡页面进行打卡吧</text>
     </view>
 
     <scroll-view scroll-y class="record-list" wx:else enable-back-to-top>
