更新首页和统计页面的布局与样式

--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -26,8 +26,7 @@
   <!-- 打卡记录卡片 -->
   <view class="record-card">
     <view class="card-header">
-      <text class="card-title">打卡记录</text>
-      <text class="card-date">{{selectedDate}}</text>
+      <!-- Removed redundant title and date display -->
     </view>
     
     <view class="record-list">
