优化统计页面功能与样式

--- a/miniprogram/pages/stat/stat.wxml
+++ b/miniprogram/pages/stat/stat.wxml
@@ -2,7 +2,9 @@
   <!-- 页面标题 -->
   <view class="header">
     <text class="title">工时统计</text>
-    <text class="subtitle">{{currentMonth}}</text>
+  </view>
+  <view class="month-display">
+    <text class="month-text">{{currentMonth}}</text>
   </view>
 
   <!-- 统计卡片 -->
@@ -14,15 +16,15 @@
       </view>
       <view class="stat-card">
         <text class="stat-number">{{totalMonthHours}}</text>
-        <text class="stat-label">本月总时长(h)</text>
+        <text class="stat-label">本月总时长(时)</text>
       </view>
       <view class="stat-card">
         <text class="stat-number">{{weekHours}}</text>
-        <text class="stat-label">本周时长(h)</text>
+        <text class="stat-label">本周时长(时)</text>
       </view>
       <view class="stat-card">
         <text class="stat-number">{{avgMonthDailyHours}}</text>
-        <text class="stat-label">日均时长(h)</text>
+        <text class="stat-label">日均时长(时)</text>
       </view>
     </view>
   </view>
@@ -45,7 +47,6 @@
         <text class="header-time">上班</text>
         <text class="header-time">下班</text>
         <text class="header-duration">时长</text>
-        <text class="header-action">操作</text>
       </view>
       
       <view wx:for="{{list}}" wx:key="date" class="record-row">
@@ -66,10 +67,6 @@
         
         <view class="cell-duration">
           <text class="duration-text">{{item.workHoursText}}</text>
-        </view>
-        
-        <view class="cell-action">
-          <text class="delete-btn" bindtap="onDeleteRecord" data-date="{{item.date}}">删除</text>
         </view>
       </view>
     </scroll-view>
