--- a/miniprogram/pages/stat/stat.wxss
+++ b/miniprogram/pages/stat/stat.wxss
@@ -23,6 +23,17 @@
   color: #888;
 }
 
+/* 月份显示 */
+.month-display {
+  text-align: center;
+  margin-bottom: 30rpx;
+}
+
+.month-text {
+  font-size: 36rpx;
+  color: #888;
+}
+
 /* 统计卡片区域 */
 .stats-section {
   margin-bottom: 40rpx;
